# WhatsKeep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: whatskeep.icns
docs/: configuration.md  research-digital-evidence-brazil.md  roadmap.md  troubleshooting.md
docs/setup-whatsapp/: README.md  linux.md  macos.md  windows.md
reports/: security-2026-04-14.md
src/whatskeep/: __init__.py  __main__.py  cli.py  config.py  evidence.py  gui.py  models.py  organizer.py  patterns.py  tracker.py  tray.py  updater.py  watcher.py
src/whatskeep/db/: __init__.py  base.py  linux.py  macos.py  windows.py
src/whatskeep/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
src/whatskeep/utils/: __init__.py  dedup.py  fs.py  phone.py  stats.py
tests/: conftest.py  test_cli.py  test_config.py  test_db_macos.py  test_organizer.py  test_patterns.py
