[project]
name = "whatskeep"
version = "1.1.0"
description = "Automatically organize and backup WhatsApp media by contact and group"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alisson Linneker"}
]
keywords = ["whatsapp", "backup", "media", "organizer", "contacts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "watchdog>=4.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[project.scripts]
whatskeep = "whatskeep.cli:app"

[project.urls]
Homepage = "https://github.com/alissonlinneker/whatskeep"
Documentation = "https://github.com/alissonlinneker/whatskeep#readme"
Repository = "https://github.com/alissonlinneker/whatskeep"
Issues = "https://github.com/alissonlinneker/whatskeep/issues"
Changelog = "https://github.com/alissonlinneker/whatskeep/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatskeep"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=whatskeep --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
